<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

        <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginTop="70dp"
                android:background="@color/colorView"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent"
        />

        <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:background="@drawable/ic_oval_profile"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@id/view"
        />
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_ime"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/imageViewProfile"
                app:layout_constraintStart_toStartOf="@id/imageViewProfile"
                app:layout_constraintTop_toBottomOf="@id/imageViewProfile"
        />
        <ImageView
                android:id="@+id/imageViewInfo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:src="@drawable/ic_info"
        />
        <TextView
                android:id="@+id/textViewAboutMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintBottom_toBottomOf="@id/imageViewInfo"
                app:layout_constraintStart_toEndOf="@id/imageViewInfo"
                android:text="@string/aboutMe"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
        />
        <TextView
                android:id="@+id/textViewInformationsAboutMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/imageViewInfo"
                android:text="@string/informations_about_me"
                android:textSize="20sp"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
        />
        <ImageView
                android:id="@+id/imageViewSchool"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/textViewInformationsAboutMe"
                android:src="@drawable/ic_school"
        />
        <TextView
                android:id="@+id/textViewSchool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewInformationsAboutMe"
                app:layout_constraintBottom_toBottomOf="@id/imageViewSchool"
                app:layout_constraintStart_toEndOf="@id/imageViewSchool"
                android:text="@string/education"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
        />
        <TextView
                android:id="@+id/textViewInformationsEducation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/imageViewSchool"
                android:text="@string/informations_education"
                android:textSize="20sp"
                android:textAlignment="gravity"
                android:textColor="@color/colorWhite"
        />
        <ImageView
                android:id="@+id/imageViewLocation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/textViewInformationsEducation"
                android:src="@drawable/ic_location"
        />
        <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewInformationsEducation"
                app:layout_constraintBottom_toBottomOf="@id/imageViewLocation"
                app:layout_constraintStart_toEndOf="@id/imageViewLocation"
                android:text="@string/location"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
        />
        <ImageView
                android:id="@+id/imageViewContactPhone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/textViewLocation"
                android:src="@drawable/ic_contact_phone"
        />
        <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewLocation"
                app:layout_constraintBottom_toBottomOf="@id/imageViewContactPhone"
                app:layout_constraintStart_toEndOf="@id/imageViewContactPhone"
                android:text="@string/phone"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
        />
        <ImageView
                android:id="@+id/imageViewContactEmail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/textViewPhone"
                android:src="@drawable/ic_contact_mail"
        />
        <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textViewPhone"
                app:layout_constraintBottom_toBottomOf="@id/imageViewContactEmail"
                app:layout_constraintStart_toEndOf="@id/imageViewContactEmail"
                android:text="@string/email"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>